--- a/css/styles.css
+++ b/css/styles.css
@@ -181,9 +181,8 @@ margin-right: 30px;
 }
 .map-image-map {
   width:100%;
-  height:auto;
-  max-height:500px;
-  object-fit: cover;
+  height:500px;
+
 }
 
 
